src/objects/PF_Test_Case_Step__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>PF_Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Step_Description__c</fullName>
        <label>Step Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>PF_TestCases__c</referenceTo>
        <relationshipLabel>Test Case Steps</relationshipLabel>
        <relationshipName>Test_Case_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Case Step</label>
    <nameField>
        <label>Test Case Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Case Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>